--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+  <!-- Estilos CSS de TinyMCE desde el CDN -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tinymce@5.10.9/skins/ui/oxide/skin.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tinymce@5.10.9/skins/content/default/content.min.css" />
 </head>
 
 <body>
@@ -18,6 +21,9 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+
+  <!-- Cargar JS de TinyMCE desde el CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/tinymce@5.10.9/tinymce.min.js"></script>
 
   <!-- En public/index.html -->
 </body>
