--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <!-- Estilos CSS de TinyMCE desde el CDN -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tinymce@5.10.9/skins/ui/oxide/skin.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tinymce@5.10.9/skins/content/default/content.min.css" />
